--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -46,8 +46,8 @@
         "description": "توثيق اللحظات الصريحة في شوارع المدينة مع سرد القصص المرئي"
       },
       "ecommerce": {
-        "title": "منصة التجارة الإلكترونية",
-        "description": "موقع تجارة إلكترونية متكامل مع عربة تسوق وبوابة دفع ولوحة تحكم للمسؤول"
+        "title": "منصة Saas",
+        "description": "منصة SaaS لإدارة المخزون مع لوحة تحكم سهلة الاستخدام وميزات شاملة"
       },
       "event": {
         "title": "توثيق الأحداث",
