--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -46,8 +46,8 @@
         "description": "Dokumentation von ungestellten Momenten auf den Straßen der Stadt mit visuellem Storytelling"
       },
       "ecommerce": {
-        "title": "E-Commerce-Plattform",
-        "description": "Full-Stack-E-Commerce-Website mit Warenkorb, Zahlungsgateway und Admin-Dashboard"
+        "title": "Saas Platform",
+        "description": "SaaS-Plattform für die Bestandsverwaltung mit benutzerfreundlichem Dashboard und umfassenden Funktionen"
       },
       "event": {
         "title": "Event-Dokumentation",
