--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -46,8 +46,8 @@
         "description": "Documentación de momentos sinceros en las calles de la ciudad con narración visual"
       },
       "ecommerce": {
-        "title": "Plataforma de Comercio Electrónico",
-        "description": "Sitio web de comercio electrónico de pila completa con carrito de compras, pasarela de pago y panel de administración"
+        "title": "Sitio Web de Comercio Electrónico Full-Stack",
+        "description": "Plataforma SaaS para la gestión de inventarios con un panel de control fácil de usar y funciones completas"
       },
       "event": {
         "title": "Documentación de Eventos",
