--- a/src/i18n/locales/id.json
+++ b/src/i18n/locales/id.json
@@ -46,8 +46,8 @@
         "description": "Dokumentasi momen candid di jalanan kota dengan storytelling visual"
       },
       "ecommerce": {
-        "title": "E-Commerce Platform",
-        "description": "Full-stack e-commerce website dengan shopping cart, payment gateway, dan admin dashboard"
+        "title": "Saas Platform",
+        "description": "Platform SaaS untuk manajemen inventaris dengan dashboard user-friendly dan fitur lengkap"
       },
       "event": {
         "title": "Event Documentation",
