--- a/src/i18n/locales/jp.json
+++ b/src/i18n/locales/jp.json
@@ -46,8 +46,8 @@
         "description": "視覚的なストーリーテリングで街角の率直な瞬間を記録"
       },
       "ecommerce": {
-        "title": "Eコマースプラットフォーム",
-        "description": "ショッピングカート、決済ゲートウェイ、管理者ダッシュボードを備えたフルスタックEコマースサイト"
+        "title": "フルスタックEコマースサイト",
+        "description": "ユーザーフレンドリーなダッシュボードと包括的な機能を備えた在庫管理のためのSaaSプラットフォーム"
       },
       "event": {
         "title": "イベント記録",
