--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -46,8 +46,8 @@
         "description": "Документация откровенных моментов на улицах города с визуальным повествованием"
       },
       "ecommerce": {
-        "title": "Платформа электронной коммерции",
-        "description": "Полнофункциональный веб-сайт электронной коммерции с корзиной покупок, платежным шлюзом и панелью администратора"
+        "title": "Полнофункциональный сайт электронной коммерции",
+        "description": "SaaS-платформа для управления запасами с удобной панелью управления и полным набором функций"
       },
       "event": {
         "title": "Документация мероприятий",
